# VVAS_CMPK

./: README.md
install/usr/lib/: libgstivasallocator-1.0.so.0.1602.0  libgstivaslameta-1.0.so.0.1602.0  libgstivasutils.so.0  libgstivasutils.so.0.1602.0
ivas-accel-sw-libs/: meson.build  meson_options.txt
ivas-accel-sw-libs/cm_package/: cmpk_chart.cpp  cmpk_chart.hpp  cmpk_ffc.cpp  cmpk_ffc.hpp  cmpk_json_utils.cpp  cmpk_json_utils.hpp  cmpk_platformstats.cpp  cmpk_platformstats.hpp  cmpk_segmentation.cpp  cmpk_segmentation.hpp
ivas-accel-sw-libs/ivas_chart/: meson.build
ivas-accel-sw-libs/ivas_chart/json_example/: drawPerformance.json  drawPower.json  drawTemp.json
ivas-accel-sw-libs/ivas_chart/src/: ivas_chart.cpp  ivas_chart.hpp
ivas-accel-sw-libs/ivas_crop/: meson.build
ivas-accel-sw-libs/ivas_crop/src/: ivas_crop.cpp
ivas-accel-sw-libs/ivas_pedpp/: meson.build
ivas-accel-sw-libs/ivas_pedpp/src/: ivas_pedpp.c
ivas-accel-sw-libs/ivas_performancestatus/: meson.build
ivas-accel-sw-libs/ivas_performancestatus/src/: ivas_performancestatus.cpp  ivas_performancestatus.hpp
ivas-accel-sw-libs/ivas_postsegmentation/: meson.build
ivas-accel-sw-libs/ivas_postsegmentation/src/: ivas_crop.cpp  ivas_postsegmentation.cpp  ivas_postsegmentation.hpp
ivas-accel-sw-libs/ivas_powerstatus/: meson.build
ivas-accel-sw-libs/ivas_powerstatus/src/: ivas_powerstatus.cpp  ivas_powerstatus.hpp  ivas_xboundingbox.cpp
ivas-accel-sw-libs/ivas_reid/: meson.build
ivas-accel-sw-libs/ivas_reid/src/: dpuinfer_partial_ffc.hpp  dpuinfer_partial_model.cpp  dpuinfer_partial_model.hpp  ivas_reid.cpp  ivas_xdpuinfer.cpp  ivas_xroadline.hpp  ivas_xsegmentation.hpp
ivas-accel-sw-libs/ivas_runindicater/: meson.build
ivas-accel-sw-libs/ivas_runindicater/json_example/: drawPerformance.json
ivas-accel-sw-libs/ivas_runindicater/src/: ivas_indicater.cpp  ivas_indicater.hpp
ivas-accel-sw-libs/ivas_tempstatus/: meson.build
ivas-accel-sw-libs/ivas_tempstatus/src/: ivas_tempstatus.cpp  ivas_tempstatus.hpp
ivas-accel-sw-libs/ivas_xboundingbox/: meson.build
ivas-accel-sw-libs/ivas_xboundingbox/src/: ivas_xboundingbox.cpp
ivas-accel-sw-libs/ivas_xdpuinfer/: meson.build
ivas-accel-sw-libs/ivas_xdpuinfer/src/: dpuinfer_partial_ffc.cpp  dpuinfer_partial_model.cpp  ivas_ffc_bak.cpp  ivas_ffc_bak.hpp  ivas_xdpuinfer.cpp  ivas_xdpumodels.hpp  ivas_xdpupriv.hpp  ivas_xroadline.cpp  ivas_xsegmentation.cpp
ivas-gst-plugins/gst-libs/gst/ivas/: gstinferencemeta.c  gstinferenceprediction.c  gstivasinpinfer.h
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/petalinux/.petalinux/: metadata  usage_statistics
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/vivado/: vivado.jou
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/vivado/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1/: xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1.xpr
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/vivado/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1.runs/.jobs/: vrs_config_1.xml
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/vivado/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1.runs/bd_f080_axi_crossbar_0_synth_1/: bd_f080_axi_crossbar_0.tcl  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/vivado/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1.runs/bd_f080_util_vector_logic_0_0_synth_1/: gen_run.xml  htr.txt  rundef.js  runme.sh
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/vivado/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1.runs/bd_f080_v_axi4s_vid_out_0_synth_1/: dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh
ivas-platforms/Embedded/zcu104_vcuDec_vmixHdmiTx/vivado/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1/xilinx_zcu104_vcuDec_vmixHdmiTx_202110_1.runs/bd_f080_v_hdmi_tx_0_synth_1/: .vivado.begin.rst  bd_f080_v_hdmi_tx_0.tcl  bd_f080_v_hdmi_tx_0.vds  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
ivas-utils/: meson.cross
(+20 files in other folders)
